fix star linebreaks on smaller screens

--- a/WanderLost/WanderLost/Client/wwwroot/css/app.css
+++ b/WanderLost/WanderLost/Client/wwwroot/css/app.css
@@ -95,6 +95,8 @@
 }
 
 .favorite-badge {
+    display: inline;
+    
     color: var(--gold);
 }
 
